infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /api/tenant/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tenants-srv
                port:
                  number: 4000
          - path: /api/organization/?(.*)
            pathType: Prefix
            backend:
              service:
                name: organization-srv
                port:
                  number: 4000
          - path: /api/customer/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customer-srv
                port:
                  number: 4000
          - path: /api/invoice/?(.*)
            pathType: Prefix
            backend:
              service:
                name: invoice-srv
                port:
                  number: 4000                
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client1-srv
          #       port:
          #         number: 3000
          #         number: 3000
